added Gitignore and updated index.html and style.css fixed: updated project links and added icons layout: enhanced skills section with icons added: included stylesheet link in HTML head fixed: corrected LinkedIn button icon fixed: corrected GitHub button icon updated: added icons to project links fixed: corrected Live Demo button icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>My portfolio</title>
 </head>
 <body>
+    <a href="#hero" class="skip-link">Skip-to-main-content</a>
     <header>
         <nav>
     <h1>Marvellous Ediagbonya.</h1>
@@ -27,16 +28,16 @@
         </nav>
     </header>
     <main>
-        <section id="intro">
+        <section id="hero">
             <h2>HI, I AM <BR> MARVELLOUS EDIAGBONYA.</h2>
                 <div class="wrapper">
             <p>
                 An Abuja-based front-end developer passionate about building responsive, functional and user-friendly web applications with great user experiences.
             </p>
-            <div class="intro_content">
+            <div class="hero_content">
                 <a href="#work" class="btn">Contact Me</a>
-                <a href="#contact" class="btn btn-secondary">LinkedIn</a>
-                <a href="#contact" class="btn btn-secondary">Github</a>
+                <a href="#contact" class="btn btn-secondary" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#contact" class="btn btn-secondary" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
             </div>
             <figure>
                 <img src="https://avatar.iran.liara.run/public" alt="profile picture">
@@ -61,8 +62,8 @@
                         <p>A functional UI component showcasing simple interactions, smooth animations, and an organized code structure that’s easy to extend.</p>
                     
                    <div>
-                     <a href="#" class="btn btn-secondary">See on Github</a>
-                    <a href="#" class="btn btn-secondary">Live Demo</a>
+                     <a href="#" class="btn btn-secondary">See on Github <i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="btn btn-secondary">Live Demo <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                    </div>
                    <div>
                         <h4>Project Info</h4>
@@ -83,8 +84,8 @@
                     <h3>Project Title</h3>
                     <p>A polished front-end layout focused on accessibility, visual balance, and efficient code, created to highlight consistent design patterns.</p>
                     <div>
-                    <a href="#" class="btn btn-secondary">See on Github</a>
-                    <a href="#" class="btn btn-secondary">Live Demo</a>
+                    <a href="#" class="btn btn-secondary">See on Github <i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="btn btn-secondary">Live Demo <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                     <div>
                         <h4>Project Info</h4>
@@ -105,8 +106,8 @@
                     <h3>Project Title</h3>
                     <p>A small web tool demonstrating practical JavaScript logic, clean styling, and user-friendly behavior built for everyday tasks.</p>
                     <div>
-                    <a href="#" class="btn btn-secondary">See on Github</a>
-                    <a href="#" class="btn btn-secondary">Live Demo</a>
+                    <a href="#" class="btn btn-secondary">See on Github <i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="btn btn-secondary">Live Demo <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                     <div>
                         <h4>Project Info</h4>
@@ -142,15 +143,15 @@
             </p>
             <div>
                 <ul class="skills">
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>JavaScript (ES6+)</li>
-                    <li>React.js</li>
-                    <li>Git & GitHub</li>
-                    <li>Responsive Web Design</li>
-                    <li>UI/UX Principles</li>
-                    <li>Cross-Browser Compatibility</li>
-                    <li>Performance Optimization</li>
+                    <li>HTML5 <i class="fa-brands fa-html5"></i></li>
+                    <li>CSS3 <i class="fa-brands fa-css3-alt"></i></li>
+                    <li>JavaScript (ES6+) <i class="fa-brands fa-js"></i></li>
+                    <li>React.js <i class="fa-brands fa-react"></i></li>
+                    <li>Git & GitHub <i class="fa-brands fa-github"></i></li>
+                    <li>Responsive Web Design <i class="fa-solid fa-globe"></i></li>
+                    <li>UI/UX Principles <i class="fa-solid fa-pencil-ruler"></i></li>
+                    <li>Cross-Browser Compatibility <i class="fa-solid fa-desktop"></i></li>
+                    <li>Performance Optimization <i class="fa-solid fa-tachometer-alt"></i></li>
                 </ul>
             </div>
             </div>
@@ -203,10 +204,10 @@
             </p>
             <p>For more information, heres my <a href="http://" download="on">resume</a></p>
            <div>
-                <a href="#" class="btn btn-secondary">LinkedIn</a>
-                <a href="#" class="btn btn-secondary">GitHub</a>
-                <a href="#" class="btn btn-secondary">X</a>
-                <a href="#" class="btn btn-secondary">WhatsApp</a>
+                <a href="#" class="btn btn-secondary" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#" class="btn btn-secondary" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+                <a href="#" class="btn btn-secondary" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#" class="btn btn-secondary" aria-label="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
            </div>
             </div>
 
