--- a/client/index.html
+++ b/client/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to my portfolio website! Explore my projects, skills, and experiences in web development and design." />
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Welcome to my portfolio website! Explore my projects, skills, and experiences in web development and design."/>
   <meta name="keywords" content="Portfolio, Web Development, Projects, Skills, Experience, Design" />
   <meta name="author" content="Marvellous Ediagbonya" />
   <meta name="robots" content="index, follow" />
-  
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png" />
   <link rel="manifest" href="assets/favicon_io/site.webmanifest" />
-
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="layout.css">
-    <title>My portfolio</title>
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <title>My portfolio</title>
 </head>
 <body>
     <a href="#hero" class="skip-link">Skip-to-main-content</a>
     <div id="aria-announcer" class="sr-only" aria-live="polite" aria-atomic="true"></div>
     <header>
-         <p id="logo">Marvellous ediagbonya</p>
+         <p id="logo">MARVEEY </p>
         <nav>
             <ul id="ul">
                 <li><a href="#work">Work</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#capability">Skills</a></li>
+                <li><a href="#contact" class="btn" id="navBtn">Contact Me</a></li>
             </ul>
             <button id="togglebtn" type="button" aria-label="navigation menu btn" aria-expanded="false" aria-controls="#ul">
                 <span class="bar"></span>
@@ -41,11 +40,11 @@
                 <div class="wrapper">
                 
             <div class="hero-content">
-                <h1>HI, I AM   MARVELLOUS EDIAGBONYA.</h1>
+                <h1>HI, I AM   MARVEEY GOODLIFE.</h1>
             <p class='herop'>
                 An Abuja-based front-end developer passionate about building responsive, functional and user-friendly web applications with great user experiences.
             </p>
-                <a href="#contact" class="btn">Contact Me</a>
+                <a href="https://wa.me/2347053902558" class="btn" rel="noopener noreferrer">Contact Me</a>
 
                 <a href="https://www.linkedin.com/in/marvellous-ediagbonya/" class="removebd" target="_blank"  rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"  aria-hidden="true"></i>
                 <span class="sr-only">LinkedIn</span> 
@@ -150,7 +149,7 @@
                 <p class="aboutp">I specialize in building responsive and user-friendly web applications. My passion lies in creating accessibility rich, and  seamless user experiences through clean and efficient code. When I'm not coding, I enjoy reading books, spending time in nature, photography, self-development, and exploring new technologies to enhance my skills in web development.<br>currently, I am focused on expanding my expertise in React and modern JavaScript frameworks to build dynamic and interactive web applications.
             </p>
              <!-- Download a PDF file -->
-<a href="assets/Marvellous_Resumee.pdf" download class="btn">
+<a href="/public/assets/Marvellous_Resumee.pdf" download class="btn">
     <i class="fa-solid fa-download"  aria-hidden="true">
     </i> Download CV
     <span class="sr-only">Download my CV</span> 
@@ -221,21 +220,21 @@
         <section id="experience">
             <h2>my experience</h2>
             <div class="wrapper">
-        <div aria-live='polite' role="region" aria-label="card carousel">
-                <h3 id="cardtitle">Education</h3>
-                <p id="subtitle"><strong>B.S.C International Relations</strong> | National Open university of Nigeria. | (IN VIEW)</p>
-                <ul>
-                    <li id="list-one"><strong>Relevant Course Work:</strong>
-Diplomacy, Political Economy, Computer Fundamentals.</li>
-<li id="list-two">Negotiation, Cross-cultural relations.</li>
-<li id="list-three">Conflict Resolution, Power.
-</li>
-                 </ul>
- <div class="buttoncontainer">
+        <div aria-live='polite' role="region" aria-label="card carousel" id="expdiv">
+                <h3 id="cardtitle"></h3>
+                <p id="subtitle"></p>
+                <ul id="expul">
+                   <li id="list-one"></li>
+                   <li id="list-two"></li>
+                    <li id="list-three"></li> 
+                </ul>
+            <!-- prev and next buttons -->
+            <div class="buttoncontainer">
                 <button type="button" id="prevbtn" title="previous review" aria-label="previous button"><i class="fas fa-chevron-left"> </i></button>
                 <button type="button" id="nextbtn" aria-label="next button"><i class="fas fa-chevron-right" title="next review"></i></button>
             </div>
-            </div>
+        </div>
+        </div>
         </section>
         <hr>
         <section id="contact">
@@ -277,11 +276,9 @@ Diplomacy, Political Economy, Computer Fundamentals.</li>
                     <input type="text" id="name" name="name" required placeholder="Enter full name" autocomplete="name">
 
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required placeholder="example@gmail.com" autocomplete="email" >
-
+                    <input type="email" id="email" name="email" required placeholder="example@gmail.com" autocomplete="email" 
                     <label for="subject">Subject:</label>
                     <input type="text" id="subject" name="subject" required placeholder="Enter subject">
-
                     <label for="message">Message:</label>
                     <textarea id="message" name="message" rows="2" required placeholder="Enter your message"></textarea>
                     <button type="submit" class="btn">Send Message</button>
@@ -298,7 +295,7 @@ Diplomacy, Political Economy, Computer Fundamentals.</li>
         &UpArrow;
     </button>
 <script src="https://kit.fontawesome.com/184a11b74d.js" crossorigin="anonymous" defer></script>
-    <script src="script.js"></script>
-    <script src="experience.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/experience.js"></script>
 </body>
 </html>
