feat: deleted icons and added new image updated style

--- a/client/index.html
+++ b/client/index.html
@@ -37,10 +37,10 @@
 
     <!-- Google Material Symbols (Outlined) -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-    
+
         <!-- Local Font Awesome:  -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/brands.min.css" rel="stylesheet">
-<meta href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/solid.min.css" rel="stylesheet">
+<!-- <meta href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/solid.min.css" rel="stylesheet"> -->
 
   <!-- style rules -->
   <link rel="stylesheet" href="./css/layout.css">
@@ -88,7 +88,7 @@
                 </a>
             </div>
             <figure>
-                <img src="https://avatar.iran.liara.run/public" alt="profile picture">
+                <img src="./assets/images/marveey-removebg-preview.webp" alt="my  picture">
             </figure>
             </div>
         </section>
