--- a/client/index.html
+++ b/client/index.html
@@ -353,7 +353,8 @@
     </button>
     <script src="./js/script.js"></script>
     <script src="./js/experience.js"></script>
-    <script src="./js/api-client.js"></script>
+        <script src="./config.js"></script>
+        <script src="./js/api-client.js"></script>
     <script src="./js/form-validator.js"></script>
 </body>
 </html>
