Add more inline padding space and margin space to h2. Update h1 and about h3 & p  content

--- a/client/index.html
+++ b/client/index.html
@@ -44,13 +44,13 @@
   <!-- style rules -->
   <link rel="stylesheet" href="./css/layout.css">
   <link rel="stylesheet" href="./css/styles.css">
-  <title>My portfolio</title>
+  <title>Project ortfolio</title>
 </head>
 <body>
     <a href="#hero" class="skip-link">Skip-to-main-content</a>
     <div id="aria-announcer" class="sr-only" aria-live="polite" aria-atomic="true"></div>
     <header>
-         <p id="logo">MARVEEY </p>
+         <p id="logo">MARVELLOUS </p>
         <nav>
             <ul id="ul">
                 <li><a href="#work">Work</a></li>
@@ -70,9 +70,9 @@
                 <div class="wrapper">
                 
             <div class="hero-content">
-                <h1>HI, I AM   MARVEEY GOODLIFE.</h1>
+                <h1>HI, I AM MARVELLOUS EDIAGBONYA.</h1>
             <p class='herop'>
-                An Abuja-based front-end developer passionate about building responsive, functional and user-friendly web applications with great user experiences.
+                An Abuja-based front-end developer passionate about building responsive, functional and user-friendly websites with great user experiences.
             </p>
                 <a href="https://wa.me/2347053902558" class="btn" rel="noopener noreferrer">Contact Me</a>
 
@@ -174,11 +174,11 @@
             <h2>About Me</h2>
             <div class="wrapper">
             <div>
-                <h3 class="abouth3">I am a front-end engineer based in Abuja. I am computer savvy.</h3>
-                <p class="aboutp">I specialize in building responsive and user-friendly web applications. My passion lies in creating accessibility rich, and  seamless user experiences through clean and efficient code. When I'm not coding, I enjoy reading books, spending time in nature, photography, self-development, and exploring new technologies to enhance my skills in web development.<br>currently, I am focused on expanding my expertise in React and modern JavaScript frameworks to build dynamic and interactive web applications.
+                <h3 class="abouth3">Front End Developer from Abuja</h3>
+                <p class="aboutp">I specialize in building responsive and user-friendly web applications. My passion lies in creating accessibility rich, and  seamless user experiences through clean and efficient code. When I'm not coding, I enjoy reading books, spending time in nature, photography, self-development, and exploring new technologies to enhance my skills in web development.<br>currently, I am focused on expanding my expertise by using modern JavaScript standard(ES6), React and RESTFUL API to build dynamic and interactive web applications.
             </p>
              <!-- Download a PDF file -->
-<a href="client/assets/Marvellous_Resumee.pdf" download class="btn">
+<a href="client/assets/Marvellous_Resumee.pdf" download class="btn" id="aboutbtn">
     <span class="material-symbols-outlined" aria-hidden="true">download</span> Download CV
     <span class="sr-only">Download my CV</span> 
 </a>
